<resources>
    <string name="app_name">CheapestPrice</string>
    <string name="correo">Ingrese su correo</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register_button">Registrar</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_maps_key">AIzaSyAUqP3aKJpf7pv4tgEsQju875KGoIam-O0</string>
    <string name="title_activity_register_map">Map</string>
    <string name="nombre">Nombre:</string>
    <string name="marca">Marca:</string>
    <string name="categoria">Categoria:</string>
    <string name="logo">Logo:</string>
    <string name="precio">Precio:</string>
    <string name="informaci_n_de_tu_tienda">Información de tu Tienda</string>

</resources>
