<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.eci.cosw.cheapestPrice.DetalleProductActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/labelname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/nombre"
            android:ems="10"/>

        <EditText
            android:id="@+id/nombreItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/labelmarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:ems="10"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/marcaItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/labelcategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:ems="10"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/labelogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:ems="10"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:ems="20"
            android:textSize="22sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/ic_save"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
